# nvml

./: .env  .gitignore  pyproject.toml
notebooks/: cluster.py  cluster_preprocess.py  flow_paths.py  incident_angles.py  qdim_plots.py  qdim_study.py  xarray_play.py  xarray_playground.py
smkconfig/qdim/: 01.yaml
src/nvml/: __init__.py  constants.py  io.py  paths.py  utils.py
src/nvml/cli/: config.py  paths.py  studies.py  study.py
src/nvml/cli/make/: config.py  create.py  main.py
src/nvml/cli/smk/: main.py  qdim_data.py
src/nvml/cli/studies/: cluster.py  create.py  flow.py  helpers.py  paths.py  qdim.py  study.py  study_paths.py
src/nvml/cli/studies/modules/: flow.py  gmodel.py  model.py  qdim.py
src/nvml/cluster/: assemble.py  multi.py  spectral.py  tsne.py
src/nvml/cluster/setup/: multi.py  single.py
src/nvml/flow_paths/: main.py
src/nvml/gmodel/: dataset.py  model.py
src/nvml/model/: data.py  gae.py  graph_data.py  interfaces.py  make.py
src/nvml/qdim/: angles.py  corr_plot.py  data.py  incident.py  interfaces.py  intext.py  wind.py
workflow/: Snakefile
workflow/rules/: qdim.smk
workflow/schemas/: qdim.schema.yaml
